# decklink-rs

./: .gitmodules  Cargo.toml
examples/: capture_frame.rs  cuda_capture.rs  list_devices.rs  status_monitor.rs
src/: allocator.rs  cuda.rs  display_mode.rs  frame.rs  lib.rs  sdk.rs  util.rs
src/device/: attributes.rs  mod.rs  status.rs
src/device/input/: device.rs  enums.rs  mod.rs  video_callback.rs
src/device/output/: mod.rs  video.rs
